1. pop-up updated 2. dashboard upaded 3. policy > bulk policy updated 4. login page updated 5. datatable icon added 6. globel font size applicable for all devices
	modified:   src/app/interceptor/auth.interceptor.ts
	modified:   src/app/pages/apps/add-policy/add-policy.component.ts
	modified:   src/app/pages/apps/all-server-patch-version/all-server-patch-version.component.html
	modified:   src/app/pages/apps/all-server-patch-version/all-server-patch-version.component.ts
	modified:   src/app/pages/apps/all-server-policy-version/all-server-policy-version.component.html
	modified:   src/app/pages/apps/all-server-policy-version/all-server-policy-version.component.ts
	modified:   src/app/pages/apps/client-administraion/client-administraion.component.html
	modified:   src/app/pages/apps/groups/groups.component.ts
	modified:   src/app/pages/apps/listregclient/client-info/client-info.component.html
	modified:   src/app/pages/apps/listregclient/client-info/client-info.component.scss
	modified:   src/app/pages/apps/listregclient/listregclient.component.html
	modified:   src/app/pages/apps/listregclient/listregclient.component.ts
	modified:   src/app/pages/apps/manageunit/manageunit.component.html
	modified:   src/app/pages/apps/manageunit/manageunit.component.scss
	modified:   src/app/pages/apps/manageunit/manageunit.component.ts
	modified:   src/app/pages/apps/policy-configuration/policy-configuration.component.html
	modified:   src/app/pages/apps/policy-configuration/policy-configuration.component.scss
	modified:   src/app/pages/apps/policy-configuration/policy-configuration.component.ts
	modified:   src/app/pages/apps/policy-summary/policy-summary.component.html
	modified:   src/app/pages/apps/policy-summary/policy-summary.component.scss
	modified:   src/app/pages/apps/policy-summary/policy-summary.component.ts
	modified:   src/app/pages/apps/policy-update/policy-update.component.html
	modified:   src/app/pages/apps/policy-update/policy-update.component.ts
	modified:   src

--- a/src/app/pages/apps/all-server-policy-version/all-server-policy-version.component.html
+++ b/src/app/pages/apps/all-server-policy-version/all-server-policy-version.component.html
@@ -16,7 +16,7 @@
                 <tr *ngFor="let item of allServerPolicy; let i = index">
                     <td>{{ i + 1 }}</td>
 
-                    <td>{{ item.versionid }}</td>
+                    <td>{{ item.policy_version }}</td>
 
                     <td>
                         {{ item.created_on !== 'N/A' ? (item.created_on | date:'dd-MM-yyyy HH:mm:ss') : 'N/A' }}
@@ -26,6 +26,10 @@
             </tbody>
         </table>
     </div>
+    <button mat-flat-button color="primary" mat-dialog-close cdkFocusInitial style="margin: auto;
+    display: flex;margin-top: 1rem;">
+        Ok
+    </button>
 
 </div>
 
