--- a/src/app/pages/apps/all-server-patch-version/all-server-patch-version.component.html
+++ b/src/app/pages/apps/all-server-patch-version/all-server-patch-version.component.html
@@ -21,11 +21,14 @@
                     <td>
                         {{ item.updated_on !== 'N/A' ? (item.updated_on | date:'dd-MM-yyyy HH:mm:ss') : 'N/A' }}
                     </td>
-
                 </tr>
             </tbody>
         </table>
     </div>
+    <button mat-flat-button color="primary" mat-dialog-close cdkFocusInitial style="margin: auto;
+    display: flex;margin-top: 1rem;">
+        Ok
+    </button>
 
 </div>
 
