--- a/src/app/pages/apps/client-administraion/client-administraion.component.html
+++ b/src/app/pages/apps/client-administraion/client-administraion.component.html
@@ -55,8 +55,8 @@
     </mat-nav-list>
   </mat-card>
   
-  <mat-card  class="  cardWithShadow">
-    <mat-card-content class="p-24 bg-white">
+  <!-- <mat-card  class="  cardWithShadow">
+    <mat-card-content class="p-24 bg-white"> -->
         
   
             <div *ngIf="formNo ==1">
@@ -69,9 +69,9 @@
               <app-regstatusclient></app-regstatusclient>
             </div>
   
-    </mat-card-content>
-  
-  </mat-card>
+    <!-- </mat-card-content>
+  </mat-card> -->
+
 </div>
 
 
