--- a/src/app/pages/apps/policy-configuration/policy-configuration.component.scss
+++ b/src/app/pages/apps/policy-configuration/policy-configuration.component.scss
@@ -104,3 +104,11 @@
 //   display: none !important;
 //   width:0px !important;
 // }
+
+.addItemTable th{
+  font-size: 22px !important;
+}
+
+.addItemTable td{
+  font-size: 20px !important;
+}
