--- a/src/app/pages/apps/policy-summary/policy-summary.component.html
+++ b/src/app/pages/apps/policy-summary/policy-summary.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-12">
-        <mat-card class="cardWithShadow">
+        <mat-card class="cardWithShadow"  >
             <mat-card-content>
                 <mat-button-toggle-group [(ngModel)]="currentRole" style="margin-bottom: 1rem;" (change)="logSelectedValue()">
                     <mat-button-toggle value="Summary" style="min-width: 140px;">Summary</mat-button-toggle>
@@ -10,144 +10,181 @@
                 
 
                 <!-- Divs to show/hide based on role -->
-                <div *ngIf="currentRole === 'Summary'">
+                <div class="spinner" style="min-height: 250px">
 
-                    <table datatable [dtOptions]="dtOptions" class="row-border hover">
-                        <thead>
-                          <tr>
-                            <th>Policy type</th>
-                            <th>Total policy</th>
-                            <th>Active policy</th>
-                          </tr>
-                        </thead>
-                        <tbody>
+                  <div *ngIf="currentRole === 'Summary'">
+  
+                      <table datatable [dtOptions]="dtOptions" class="row-border hover">
+                          <thead>
                             <tr>
-                                <td>
-                                    <span style="display: flex;">
-                                        <i-tabler name="anchor" class="icon-20 d-flex" style="margin-right: 0.2rem"></i-tabler>
-                                        <span>
-                                            IP
-                                        </span>
-                                    </span>
-                                </td>
-                                <td>{{policySummary?.IP.total}}</td>
-                                <td>{{policySummary?.IP.addlist}}</td>
+                              <th>Policy type</th>
+                              <th>Total policy</th>
+                              <th>Active policy</th>
                             </tr>
-                            <tr>
-                                <td>
-                                    <span style="display: flex;">
-                                        <i-tabler name="link" class="icon-20 d-flex" style="margin-right: 0.2rem"></i-tabler>
-                                        <span>
-                                            URL
-                                        </span>
-                                    </span>
-                                </td>
-                                <td>{{policySummary?.URL.total}}</td>
-                                <td>{{policySummary?.URL.addlist}}</td>
-                            </tr>
-                         
-                        </tbody>
-                      </table>
-
-                </div>
-                <div *ngIf="currentRole === 'URL'">
-
-                    <div style="display:flex;">
-
-                        <div style="margin-bottom: 10px;">Total Entries: {{totalEntries}}</div>
-                        <span class="hintText" style="font-size: 0.7rem; margin-left: 10px; color: gray;">* Maximum 100 entries displayed
-                        </span>
+                          </thead>
+                          <tbody>
+                              <tr>
+                                  <td>
+                                      <span style="display: flex;">
+                                          <i-tabler name="anchor" class="icon-20 d-flex" style="margin-right: 0.2rem"></i-tabler>
+                                          <span>
+                                              IP
+                                          </span>
+                                      </span>
+                                  </td>
+                                  <td>{{policySummary?.IP.total}}</td>
+                                  <td>{{policySummary?.IP.addlist}}</td>
+                              </tr>
+                              <tr>
+                                  <td>
+                                      <span style="display: flex;">
+                                          <i-tabler name="link" class="icon-20 d-flex" style="margin-right: 0.2rem"></i-tabler>
+                                          <span>
+                                              URL
+                                          </span>
+                                      </span>
+                                  </td>
+                                  <td>{{policySummary?.URL.total}}</td>
+                                  <td>{{policySummary?.URL.addlist}}</td>
+                              </tr>
+                           
+                          </tbody>
+                        </table>
+  
+                  </div>
+                  <div *ngIf="currentRole === 'URL'"  [style.display]="showURLDetails ? 'block' : 'none'">
+  
+                      <div style="display:flex;">
+  
+                          <div style="margin-bottom: 10px;">Total Entries: {{totalEntries}}</div>
+                          <span class="hintText" style="font-size: 0.7rem; margin-left: 10px; color: gray;">* Maximum 100 entries displayed
+                          </span>
+                      </div>
+                      
+  
+                      <div  class="table-container">
+  
+                          <span class="search-div" style="display: flex; flex-direction: row-reverse; margin-top: -24px; ">
+                              <mat-form-field appearance="outline" class="w-100" color="primary" style="width:300px; display: flex; flex-direction: row; align-items: center; justify-content: flex-end;">
+                                  <input matInput type="text" placeholder="Search URL" [(ngModel)]="urlSearchText" (keyup.enter)="urlSearch()"/>
+                                  <mat-icon matSuffix style="cursor: pointer; background-color: #f7c878; border-radius: 0.5rem;"
+                                    (click)="urlSearch()">
+                                    <i-tabler name="search" class="icon-20 d-flex searchIcon"></i-tabler>
+                                  </mat-icon>
+                                </mat-form-field>
+                          </span>
+                          
+                          <table datatable [dtOptions]="dtOptions" class="row-border hover  fixed-table" >
+                              <thead>
+                                <tr>
+                                  <th>Sr No</th>
+                                  <th>URL</th>
+                                  <th>Created On</th>
+                                  <th>Status</th>
+                                  <th>Version</th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr *ngFor="let item of urlDetails; let i = index">
+                                  <td>{{ i + 1 }}</td>
+                                  <td>{{ item.value }}</td>
+                                  <td>{{ item.updated_on |
+                                      date:'dd-MM-yyyy HH:mm:ss'}}</td>
+                                  <td>{{ item.status_text }}</td>
+                                  <td>{{ item.version }}</td>
+                                </tr>
+                              </tbody>
+                            </table>
+                            
+                      </div>
+  
+                  </div>
+                  <div *ngIf="currentRole === 'IP'">
+  
+                      <div style="display:flex;">
+  
+                          <div style="margin-bottom: 10px;">Total Entries: {{totalEntries}}</div>
+                          <span class="hintText" style="font-size: 0.7rem; margin-left: 10px; color: gray;">* Maximum 100 entries displayed
+                          </span>
+                      </div>
+  
+                      <div class="table-container">
+                          <!-- style="display: flex; flex-direction: row-reverse;" -->
+                          <div class="search-div" style="display: flex; flex-direction: row-reverse; margin-top: -24px;" >
+                              <mat-form-field appearance="outline" class="w-100" color="primary" style="width:300px; display: flex; flex-direction: row; align-items: center; justify-content: flex-end;">
+                                  <input matInput type="text" placeholder="Search IP" [(ngModel)]="ipSearchText" (keyup.enter)="ipSearch()"/>
+                                  <mat-icon matSuffix style="cursor: pointer; background-color: #f7c878; border-radius: 0.5rem;"
+                                    (click)="ipSearch()">
+                                    <i-tabler name="search" class="icon-20 d-flex searchIcon"></i-tabler>
+                                  </mat-icon>
+                                  <mat-hint style="display: none;"></mat-hint>
+                                </mat-form-field>
+                          </div>
+      
+                          
+      
+                          <table datatable [dtOptions]="dtOptions" class="row-border hover fixed-table">
+                              <thead>
+                                <tr>
+                                  <th>Sr No</th>
+                                  <th>IP</th>
+                                  <th>Created On</th>
+                                  <th>Status</th>
+                                  <th>Version</th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr *ngFor="let item of ipDetails; let i = index">
+                                  <td>{{ i + 1 }}</td>
+                                  <td>{{ item.value }}</td>
+                                  <td>{{ item.updated_on |
+                                      date:'dd-MM-yyyy HH:mm:ss'}}</td>
+                                  <td>{{ item.status_text }}</td>
+                                  <td>{{ item.version }}</td>
+                                </tr>
+                              </tbody>
+                            </table>
+                            
+                      </div>
+  
                     </div>
                     
 
-                    <div  class="table-container">
+                    <!-- <ngx-spinner size="medium" color="#26bdf5
+                    " type="ball-clip-rotate" [fullScreen]="false" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); "> -->
 
-                        <span class="search-div" style="display: flex; flex-direction: row-reverse; margin-top: -13px; ">
-                            <mat-form-field appearance="outline" class="w-100" color="primary" style="width:300px; display: flex; flex-direction: row; align-items: center; justify-content: flex-end;">
-                                <input matInput type="text" placeholder="Search URL" [(ngModel)]="urlSearchText" (keyup.enter)="urlSearch()"/>
-                                <mat-icon matSuffix style="cursor: pointer; background-color: #f7c878; border-radius: 0.5rem;"
-                                  (click)="urlSearch()">
-                                  <i-tabler name="search" class="icon-20 d-flex searchIcon"></i-tabler>
-                                </mat-icon>
-                              </mat-form-field>
-                        </span>
-                        
-                        <table datatable [dtOptions]="dtOptions" class="row-border hover  fixed-table" >
-                            <thead>
-                              <tr>
-                                <th>Sr No</th>
-                                <th>URL</th>
-                                <th>Created On</th>
-                                <th>Status</th>
-                                <th>Version</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr *ngFor="let item of urlDetails; let i = index">
-                                <td>{{ i + 1 }}</td>
-                                <td>{{ item.value }}</td>
-                                <td>{{ item.updated_on |
-                                    date:'dd-MM-yyyy HH:mm:ss'}}</td>
-                                <td>{{ item.status_text }}</td>
-                                <td>{{ item.version }}</td>
-                              </tr>
-                            </tbody>
-                          </table>
-                          
-                    </div>
 
-                </div>
-                <div *ngIf="currentRole === 'IP'">
+                    <!-- <img src="https://mir-s3-cdn-cf.behance.net/project_modules/max_632/04de2e31234507.564a1d23645bf.gif" alt="">   -->
 
-                    <div style="display:flex;">
+                    <!-- <img src="https://img.pikbest.com/png-images/20190918/cartoon-snail-loading-loading-gif-animation_2734139.png!bw700" alt=""  height="200px"> -->
 
-                        <div style="margin-bottom: 10px;">Total Entries: {{totalEntries}}</div>
-                        <span class="hintText" style="font-size: 0.7rem; margin-left: 10px; color: gray;">* Maximum 100 entries displayed
-                        </span>
-                    </div>
+                    <!-- <img src="https://i.pinimg.com/originals/3d/6a/a9/3d6aa9082f3c9e285df9970dc7b762ac.gif" alt="" style="max-height: 250px;"> -->
 
-                    <div class="table-container">
-                        <!-- style="display: flex; flex-direction: row-reverse;" -->
-                        <div class="search-div" style="display: flex; flex-direction: row-reverse; margin-top: -13px;" >
-                            <mat-form-field appearance="outline" class="w-100" color="primary" style="width:300px; display: flex; flex-direction: row; align-items: center; justify-content: flex-end;">
-                                <input matInput type="text" placeholder="Search IP" [(ngModel)]="ipSearchText" (keyup.enter)="ipSearch()"/>
-                                <mat-icon matSuffix style="cursor: pointer; background-color: #f7c878; border-radius: 0.5rem;"
-                                  (click)="ipSearch()">
-                                  <i-tabler name="search" class="icon-20 d-flex searchIcon"></i-tabler>
-                                </mat-icon>
-                                <mat-hint style="display: none;"></mat-hint>
-                              </mat-form-field>
-                        </div>
-    
-                        
-    
-                        <table datatable [dtOptions]="dtOptions" class="row-border hover fixed-table">
-                            <thead>
-                              <tr>
-                                <th>Sr No</th>
-                                <th>IP</th>
-                                <th>Created On</th>
-                                <th>Status</th>
-                                <th>Version</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr *ngFor="let item of ipDetails; let i = index">
-                                <td>{{ i + 1 }}</td>
-                                <td>{{ item.value }}</td>
-                                <td>{{ item.updated_on |
-                                    date:'dd-MM-yyyy HH:mm:ss'}}</td>
-                                <td>{{ item.status_text }}</td>
-                                <td>{{ item.version }}</td>
-                              </tr>
-                            </tbody>
-                          </table>
-                          
-                    </div>
 
+                    <!-- <img src="https://icaengineeringacademy.com/wp-content/uploads/2019/01/ajax-loading-gif-transparent-background-2.gif" alt="" style="max-height: 250px;"> -->
+
+                    <!-- <img src="https://i.pinimg.com/originals/49/8f/77/498f7727ecf2a588d6c3eebac92a7c4b.gif" alt="" style="max-height: 250px;"> -->
+
+                    <!-- <img src="https://i.pinimg.com/originals/65/ba/48/65ba488626025cff82f091336fbf94bb.gif" alt="" style="max-height: 250px;"> -->
+
+                    <!-- <img src="https://i.pinimg.com/originals/45/12/4d/45124d126d0f0b6d8f5c4d635d466246.gif" alt="" style="max-height: 250px;"> -->
+                   
+                   
+                    <!-- <p 
+                      style="font-size: larger; font-weight: bold; color: #26c6da
+                      ; position: absolute; bottom: -80px; left: -130px; right: 0; margin: 0 auto; width: max-content;"
+                      >
+                        Loading Please Wait...
+                      </p>
+                    </ngx-spinner> -->
                 </div>
 
             </mat-card-content>
         </mat-card>
     </div>
 </div>
+
+
+<!-- <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="ball-clip-rotate" [fullScreen]="true">
+  <p class="text-white"> {{ loaderStatus }} </p>
+</ngx-spinner> -->
