--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
 
-  @media screen and (min-width: 1280px) {
+  // @media screen and (min-width: 1280px) {
 
 
   h1 {
@@ -36,6 +36,19 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   div {
     font-size: 20px;
   }
+
+  mat-option{
+    font-size: 20px !important;
+    
+  }
+
+  sub{
+    font-size: 20px !important;
+
+  }
+  mat-card-title{
+    font-size: 22px !important;
+}
 
   .mat-subtitle-2 {
     font-size: 20px !important;
@@ -57,6 +70,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   } 
 
   
-}
+// }
 
   
